--- a/public/about/index.html
+++ b/public/about/index.html
@@ -78,6 +78,7 @@
   <p>What more do you wanna know about me?
 When someone asks Tell me about yourself? It almost feels like someone allowed me to sing an oldsong. Same lyrics with some variables in it. Maybe you are expecting somthing like - My name is <strong>$FULL_NAME</strong> I am <strong>$PROFESSION</strong> and i live in <strong>$CITY</strong>. But Putting variables in a shity old 90's line will notdefine who you are right?</p>
 <p>What defines me is that i like to live a minimal life. where no continous blotted &amp; shity notifications are comming to my phone.</p>
+<h2 id="resume-my-resume">Resume <a href="https://dhruvcodes.me/pub/resume.html">my-resume</a></h2>
 <p><img src="/custom_img/rabit.gif" alt="" /></p>
 
 </div>
